2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Try to deal with libsoup bug #494128. Seems there is no way to force
	SoupServer to close all pending HTTP connections. So it seems we have
	to accept leaking the SoupServer on shutdown, as each HTTP connection
	increases the server's reference count. Well, but at least we can try
	not to add additional leaking references. That's what this changes
	try to achive.

	* libepc/publisher.c: Try to deal with libsoup bug #494128
	* tests/test-publisher-libsoup-494128.c: Test run/quit variants
	* Makefile.am, tests/.gitignore: Add test-publisher-libsoup-494128.c

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Use more descriptive property names for EpcPublisher.

	* docs/reference/libepc/libepc-sections.txt,
	libepc/publisher.c, libepc/publisher.h,
	tests/test-consumer-by-name.c: Update property names.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Rename epc_tls_privkey_* functions to epc_tls_private_key_*,
	which results in same symbol length for private key and
	equivalent certificate functions.

	* docs/reference/libepc/libepc-sections.txt: Updating symbols.
	* libepc/tls.c, libepc/tls.h, libepc-ui/entropy-progress.c:
	Rename epc_tls_privkey_* functions to epc_tls_private_key_*.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcPublication to EpcResource in EpcPublisher.

	* libepc/publisher.c: Rename EpcPublication to EpcResource.

2007-11-08  Mathias Hasselmann  <mathias@openismus.com>

	Show a progress window when generating new keys.

	* examples/server-credentials.c: Use EpcEntropyProgress.
	* libepc-ui/passworddialog.c, libepc-ui/passworddialog.h,
	examples/test-consumer.c: Rename files to password-dialog.
	* libepc/tls.c, libepc/tls.h: Add epc_tls_privkey_set_hooks which
	allows showing of a progress window when generating private keys.
	* libepc-ui/entropy-progress.c, libepc-ui/entropy-progress.h,
	Makefile.am: Add EpcEntropyProgress, which can be shown when