@@ -10,4 +10,5 @@ test-dispatcher-local-collision
 test-dispatcher-multiple-services
 test-dispatcher-simple-service
 test-dispatcher-subtypes
+test-publisher-change-name
 test-publisher-libsoup-494128
