@@ -15,8 +15,8 @@ service_browser_cb (AvahiServiceBrowser     *browser G_GNUC_UNUSED,
                     AvahiIfIndex             interface G_GNUC_UNUSED,
                     AvahiProtocol            protocol G_GNUC_UNUSED,
                     AvahiBrowserEvent        event,
-                    const char              *name G_GNUC_UNUSED,
-                    const char              *type G_GNUC_UNUSED,
+                    const char              *name,
+                    const char              *type,
                     const char              *domain G_GNUC_UNUSED,
                     AvahiLookupResultFlags   flags,
                     void                    *data G_GNUC_UNUSED)
